// 使用物品
message C2SItemUse {
	optional int32 targetId 	= 1[default = 0];
	required int32 itemId		= 2;
	required int32 itemNum		= 3;
}        
message S2CItemUse {
	required int32 itemId		= 2;
	required int32 itemNum		= 3;
}

// 购买物品
message C2SItemBuy { //cmd=BAG_ITEM_BUY 背包物品购买
	required int32 itemId		= 1;	// 物品Id
	required int32 buyNum 	 	= 2;	// 购买数量
}
message S2CItemBuy {
}

// 出售物品
message C2SItemSell {
 	required int32 itemId		= 2;
 	required int32 itemNum		= 3;
}
message S2CItemSell {
	required int32 itemId		= 1;
 	required int32 itemNum		= 2;
}

// 物品合成
message C2SItemSynthetic {
	required int32 itemId		= 1;
}
message S2CItemSynthetic {
	required int32 itemId		= 1;	
}

// 装备合成
message C2SEquipSynthetic {
	required int32 heroId		=1;
 	required int32 equipId		=2;
}
message S2CEquipSynthetic {
	required int32 heroId		=1;
 	required int32 equipId		=2;	
}

message C2SEquipEnhanced{ //装备强化 cmd =4054 返回通用结果
	required int32 heroId		=1[default=0];//武将ID
 	required int32 equipId		=2[default=0];//装备ID
 	required int32 type         =3[default=0];//类型 1单次强化，2一键强化
}

message C2SEquipEnchant{//装备附魔 cmd =4055 放回通用结果
	required int32 heroId		=1[default=0];//武将ID
 	required int32 equipId		=2[default=0];//装备ID
}

// 新道具属性更改
message C2SItemOld{
	required int32 itemId		=2;
}
message S2CItemOld{
	required int32 itemId		=1;
}