
import "GuildMsg.proto";
message C2STravelShopInfo { //cmd=TRAVEL_SHOP_LIST 获取旅行商店信息
}
message S2CTravelShopInfo {
	repeated TravelShop shopList =1; //商店列表
}

message S2CSecretShopInfo { //cmd=SECRET_SHOP_INFO 神秘商店信息
	required int32 shopId =1;//商店Id
	repeated ShopItem itemList =2; //商品列表
	required int64 closeTime =3; //关闭时间
	required bool isLogin =4[default=false];//是否登录推送 false否，true是
}

message C2SBuyShopItem { // cmd=BUY_SHOP_ITEM 购买商店物品
	required int32 shopId =1;//商店Id
	required int32 barcode =2;//商店条目
	required int32 buyCount = 3[default=1];//购买
}
message S2CBuyShopItem {
	required int32 shopId =1;//商店Id
	required ShopItem item=2; //商品
}

message C2SRefreshShop { // cmd=REFRESH_SHOP 刷新商店
	required int32 shopId =1;//商店Id
}
message S2CRefreshShop {
	required TravelShop shop =1;//商店信息
}

message C2SQuickBuy { // cmd=BUY_QUICK_BUY	 快捷购买
	required AttributeType buyType = 1; 	//购买类型
}
message S2CQuickBuy {
	required AttributeType buyType 	= 1; 	//购买类型	
	required int32 buyNum 			= 2;	//付费购买次数
	optional int32 freeNum 			= 3;	//免费购买次数
}

// 旅行商店信息
message TravelShop {
	required int32 shopId =1;//商店Id
	repeated ShopItem itemList =2; //商品列表
	required int64 nextTime =3; //下次刷新时间
	required int32 refreshCount = 4;//刷新次数
}

// 商店物品信息
message ShopItem {
	required int32 barcode =1;//商店条目
	required int32 state =2; // 商品状态0-卖完1-可卖
}
